Modify image size

--- a/hardware/arduino/aruberrry_spin/Measure_Temperature_and_Humidity.ipynb
+++ b/hardware/arduino/aruberrry_spin/Measure_Temperature_and_Humidity.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:96e44e39286f987774015c0ecf6f2b0d44ae2dfb7261f582e816df8780303d0a"
+  "signature": "sha256:03062412a471b9b3a1779915af55c03a287cfcca7f8795a534b871c037f4feb7"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -67,8 +67,8 @@
      "source": [
       "### Output and Source Code\n",
       "\n",
-      "![temperature_humidity](images/temperature_humidity.png)\n",
-      "![temperature_humidity2](images/temperature_humidity2.png)"
+      "<img src=\"images/temperature_humidity.png\" width=300 />\n",
+      "<img src=\"images/temperature_humidity2.png\" width=500 />"
      ]
     },
     {
