--- a/books/Algorithmic_Problem_Solving_Strategies/problems/BRACKETS2.ipynb
+++ b/books/Algorithmic_Problem_Solving_Strategies/problems/BRACKETS2.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:0a56a421449071d4387d100d6de5b72e5d3f9f603b687b2e62f5ebf6ad6584b9"
+  "signature": "sha256:df0f65d2ffd1feddb07f00ad942fafa3eadfd07a80d85fc7d69b1b11a4cc8648"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -94,10 +94,20 @@
       "\n",
       "- Python\uc5d0 Stack \uc790\ub8cc\uad6c\uc870\uac00 \ub2f9\uc5f0\ud788 \uc788\uc744\uac70\ub77c\uace0 \uc0dd\uac01\ud588\ub294\ub370 \uc5c6\uc5c8\ub2e4.\n",
       "- \uadf8\ub798\uc11c list\ub85c \uad6c\ud604\uc744 \ud574\uc57c\ub410\ub2e4.\n",
+      "- \uc5b4\ub835\uac8c \uc0dd\uac01\ud560 \uac83 \uc5c6\uc774 \uba38\ub9bf\uc18d\uc73c\ub85c stack\uc758 \uadf8\ub9bc\uc744 \uadf8\ub9ac\uc790. \ubb54\uac00 \ud558\ub098\uc529 \uc313\uc774\ub294 \ub290\ub08c\n",
+      "\n",
+      "![stack](images/stack.png)\n",
+      "\n",
       "- stack\uc758 \ud2b9\uc9d5\n",
       "  - \uc544\ub798\uc5d0\uc11c \uc704\ub85c \uc313\uc778\ub2e4.\n",
       "  - top \uc774\ub77c\ub294 \ud568\uc218\ub97c \ud558\ub098 \ub9cc\ub4e4\uc5b4 stack\uc758 \uac00\uc7a5 \uc0c1\ub2e8\uc5d0 \ubb34\uc5c7\uc774 \uc788\ub294\uc9c0 \ud30c\uc545\n",
-      "  - \\_\\_str\\_\\_\ub97c \ub9cc\ub4e4\uc5b4\uc11c \uba87 \uac1c\uac00 \ub0a8\uc558\ub294\uc9c0 \ub3cc\ub824\uc8fc\uae30"
+      "  - is_empty\ub97c \ub9cc\ub4e4\uc5b4\uc11c \ud604\uc7ac stack\uc774 \ube44\uc5b4\uc788\ub294\uc9c0 \ud655\uc778\n",
+      "  - push\ub97c \ub9cc\ub4e4\uc5b4 stack\uc5d0 \ud558\ub098\uc529 \uc313\uae30\n",
+      "  - \\_\\_str\\_\\_\ub97c \ub9cc\ub4e4\uc5b4\uc11c \uba87 \uac1c\uac00 \ub0a8\uc558\ub294\uc9c0 \ub3cc\ub824\uc8fc\uae30\n",
+      "  \n",
+      "### Stack \ucc38\uace0 \uc0ac\uc774\ud2b8\n",
+      "\n",
+      "- [stacks in python | codeatsociallywired](https://codeatsociallywired.wordpress.com/tag/stacks-in-python/)"
      ]
     },
     {
@@ -330,8 +340,7 @@
       "### input \ubc1b\uae30\n",
       "\n",
       "- \uc774\ub7f0 \ubb38\uc81c\ud480\uc774 \uc0ac\uc774\ud2b8\ub294 input \ubc1b\ub294\uac8c \uac00\uc7a5 \uc5b4\ub835\ub2e4. input\uc744 \ubc1b\uc744 \uc218 \uc788\uc5b4\uc57c \ubb38\uc81c\ub97c \ud480 \uc218 \uc788\ub294\ub370..\n",
-      "  - [algospot.com ::  \n",
-      "\t\uc54c\uace0\uc2a4\ud31f \uc628\ub77c\uc778 \uc800\uc9c0/\uccab \ubc88\uc9f8 \ubb38\uc81c \ud480\uae30](https://algospot.com/wiki/read/%EC%95%8C%EA%B3%A0%EC%8A%A4%ED%8C%9F_%EC%98%A8%EB%9D%BC%EC%9D%B8_%EC%A0%80%EC%A7%80/%EC%B2%AB_%EB%B2%88%EC%A7%B8_%EB%AC%B8%EC%A0%9C_%ED%92%80%EA%B8%B0): input \ubc1b\ub294\ubc95 \uc0c1\uc138\ud788 \ub098\uc654\uc73c\ub2c8 \ucc38\uace0\n",
+      "  - [algospot.com :: \uc54c\uace0\uc2a4\ud31f \uc628\ub77c\uc778 \uc800\uc9c0/\uccab \ubc88\uc9f8 \ubb38\uc81c \ud480\uae30](https://algospot.com/wiki/read/%EC%95%8C%EA%B3%A0%EC%8A%A4%ED%8C%9F_%EC%98%A8%EB%9D%BC%EC%9D%B8_%EC%A0%80%EC%A7%80/%EC%B2%AB_%EB%B2%88%EC%A7%B8_%EB%AC%B8%EC%A0%9C_%ED%92%80%EA%B8%B0): input \ubc1b\ub294\ubc95 \uc0c1\uc138\ud788 \ub098\uc654\uc73c\ub2c8 \ucc38\uace0\n",
       "  - \ubb3c\ub860 \ubaa8\ub4e0 \uc785\ub825\uc744 \ubc1b\uc544 \ubaa8\uc544\uc11c \uacc4\uc0b0\ud55c \ub4a4 \ud55c\uaebc\ubc88\uc5d0 \ucd9c\ub825\ud574\ub3c4 \ubb34\ubc29\ud558\uc9c0\ub9cc, \uad6c\ud604\uc758 \ud3b8\uc758\ub97c \uc704\ud574\uc11c\ub294 **\uac01 \uc785\ub825\uc744 \ubc14\ub85c \ucc98\ub9ac\ud558\ub294 \uac83\uc774 \ud604\uba85**\n",
       "\n",
       "### \uc54c\uace0\ub9ac\uc998 \ubc0f Test Code \uc791\uc131 \ubc0f Test Code\uc758 \uc911\uc694\uc131\n",
@@ -343,7 +352,7 @@
       "- \ub0b4\uac00 \uac00\uc7a5 \ud06c\uac8c \uc2e4\uc218\ud588\ub358 2\uac1c\ub294 **'NO'\ub97c 'No'**\ub77c\uace0 \ud45c\uae30\ud55c \uac83\uacfc **\uad04\ud638\uac00 \ub531 1\uac1c \uc788\uc744 \ub54c** \uc5d0\ub7ec\ub97c \ud0d0\uc9c0\ud574\ub0b4\uc9c0 \ubabb\ud55c\uc810.\n",
       "- \uc2ac\ub2d8\uc774 \ud14c\uc2a4\ud2b8 \ucf00\uc774\uc2a4\ub97c \uc81c\uacf5\ud574 \uc8fc\uc154\uc11c \ud14c\uc2a4\ud2b8 \ucf54\ub4dc\ub97c \uc9e4 \uc218 \uc788\uc5c8\ub2e4. \ud14c\uc2a4\ud2b8 \ucf54\ub4dc\ub97c \uc608\uc804\uc5d0 \ucc45 \uba87 \ubc88 \ub4a4\uc838\ubcf4\uace0 TDD\ub3c4 \ub4a4\uc838 \ubd24\ub294\ub370 \uc2e4\uc9c8\uc801\uc73c\ub85c \ud65c\uc6a9\ud574 \ubcf8 \uc801\uc740 \ucc98\uc74c\uc774\ub2e4. \ubab8\uc5d0 \uc2b5\uad00\uc774 \ubca0\uc9c0 \uc54a\uc544\uc11c \uadf8\ub7f0\uac83 \uac19\ub2e4.\n",
       "- TDD\uc5d0\uc11c\ub294 \ud14c\uc2a4\ud2b8 \ucf54\ub4dc\ub97c \uba3c\uc800 \uc791\uc131\ud558\ub294\ub370..? \uc774 \ubd80\ubd84\uc740 \uc880 \ub354 \uace0\ubbfc\uc744 \ud574\ubd10\uc57c\uaca0\ub2e4.\n",
-      "- **unittest**\ub97c \uc368\ubcf4\ub2c8 \uc88b\uc740 \uc810\uc740 **\uc2dc\uac04 \uc808\uc57d**\uc774 \ub41c\ub2e4\ub294 \uac83\uc774\ub2e4. \uadf8\ub9ac\uace0 **\ub0b4 \ucf54\ub4dc\ub97c \ubbff\uc744** \uc218 \uc788\uac8c \ub410\ub2e4. \uc5b4\ub5a4 \uc0ac\uc6a9\uc790 \uc785\ub825\uc774 \ub4e4\uc5b4\uc62c \uac83\uc778\uac00? \uadf8\uac83\uc5d0 \ub300\ud55c \uc608\uc678\ucc98\ub9ac\ub294 \ub418\uc5b4 \uc788\ub294\uac00? \uc774\uac8c \uc911\uc694\ud558\ub2e4\ub294 \uac83\uc744 \uae68\ub2ec\uc558\ub2e4. \uc774\ub7f0 \uc608\uc678 \uc0c1\ud669\uc744 \ucc98\ub9ac\ud574 \ub0b4\uc9c0 \ubabb\ud558\uba74 \ud574\ucee4\ub4e4\uc758 **Fuzzing** \uc774\ub098 **Source Code Auditing**\uc5d0 **\ucde8\uc57d\uc810\uc774 \ub178\ucd9c**\ub420 \uc218 \uc788\ub2e4\ub294 \uac78 \uc57d\uac04\uc774\ub098 \uacbd\ud5d8\ud558\uac8c \ub41c\uac83 \uac19\ub2e4.\n",
+      "- **unittest**\ub97c \uc368\ubcf4\ub2c8 \uc88b\uc740 \uc810\uc740 **\uc2dc\uac04 \uc808\uc57d**\uc774 \ub41c\ub2e4\ub294 \uac83\uc774\ub2e4. \uadf8\ub9ac\uace0 **\ub0b4 \ucf54\ub4dc\ub97c \ubbff\uc744** \uc218 \uc788\uac8c \ub410\ub2e4. \uc5b4\ub5a4 \uc0ac\uc6a9\uc790 \uc785\ub825\uc774 \ub4e4\uc5b4\uc62c \uac83\uc778\uac00? \uadf8\uac83\uc5d0 \ub300\ud55c \uc608\uc678\ucc98\ub9ac\ub294 \ub418\uc5b4 \uc788\ub294\uac00? \uc774\uac8c \uc911\uc694\ud558\ub2e4\ub294 \uac83\uc744 \uae68\ub2ec\uc558\ub2e4. \uc774\ub7f0 \uc608\uc678 \uc0c1\ud669\uc744 \ucc98\ub9ac\ud574 \ub0b4\uc9c0 \ubabb\ud558\uba74 \ud574\ucee4\ub4e4\uc758 [**Fuzzing**](http://en.wikipedia.org/wiki/Fuzz_testing) \uc774\ub098 [**Source Code Auditing**](http://en.wikipedia.org/wiki/Code_audit)\uc5d0 **\ucde8\uc57d\uc810\uc774 \ub178\ucd9c**\ub420 \uc218 \uc788\ub2e4\ub294 \uac78 \uc57d\uac04\uc774\ub098 \uacbd\ud5d8\ud558\uac8c \ub41c\uac83 \uac19\ub2e4.\n",
       "- [\ube14\ub85c\uadf8\uc5d0 \ud3ec\uc2a4\ud305 \ud574\ub3c4 \ub41c\ub2e4](https://algospot.com/forum/read/2238/)\ub97c \uc77d\uace0 \uacf5\uac1c\ud569\ub2c8\ub2e4. \ud639\uc2dc \ubb38\uc81c\uac00 \ub41c\ub2e4\uba74 \uc54c\ub824\uc8fc\uc2dc\uae30 \ubc14\ub78d\ub2c8\ub2e4."
      ]
     }
