--- a/books/Algorithmic_Problem_Solving_Strategies/problems/BRACKETS2.ipynb
+++ b/books/Algorithmic_Problem_Solving_Strategies/problems/BRACKETS2.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:7716fc5f61349ba5ae74fa987a2c94f3688d35d5d7b7015ffd4fa67bd38c858c"
+  "signature": "sha256:ebb0e53178f2ea6948368c4d06c33d170a94f3a6367e6dbd3615867de97bd61c"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -96,7 +96,7 @@
       "- \uadf8\ub798\uc11c list\ub85c \uad6c\ud604\uc744 \ud574\uc57c\ub410\ub2e4.\n",
       "- \uc5b4\ub835\uac8c \uc0dd\uac01\ud560 \uac83 \uc5c6\uc774 \uba38\ub9bf\uc18d\uc73c\ub85c stack\uc758 \uadf8\ub9bc\uc744 \uadf8\ub9ac\uc790. \ubb54\uac00 \ud558\ub098\uc529 \uc313\uc774\ub294 \ub290\ub08c\n",
       "\n",
-      "![stack](files/images/stack.png)\n",
+      "<img src=\"files/images/stack.png\" width=400 />\n",
       "\n",
       "- stack\uc758 \ud2b9\uc9d5\n",
       "  - \uc544\ub798\uc5d0\uc11c \uc704\ub85c \uc313\uc778\ub2e4.\n",
