--- a/english/20141224_the_ideal_girlfriend.ipynb
+++ b/english/20141224_the_ideal_girlfriend.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:657efa78071bc98e0b22607d7f640a55defba9c2ae0013ce3750d53bcabb16e1"
+  "signature": "sha256:035e2600345a61aa3176c6f29dfe9570d21da91b3483ef14b22c90048e323cc9"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -14,7 +14,7 @@
      "source": [
       "# The ideal girlfriend\n",
       "\n",
-      "<img src=\"images/se_gyung.jpg\" width=400>"
+      "<img src=\"images/se_gyung.JPG\" width=400>"
      ]
     },
     {
