--- a/english/20141224_the_ideal_girlfriend.ipynb
+++ b/english/20141224_the_ideal_girlfriend.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:035e2600345a61aa3176c6f29dfe9570d21da91b3483ef14b22c90048e323cc9"
+  "signature": "sha256:afc0a0ea771f5499241286c1e52ad34e6427821de4285c1613d3547c42009022"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -14,7 +14,7 @@
      "source": [
       "# The ideal girlfriend\n",
       "\n",
-      "<img src=\"images/se_gyung.JPG\" width=400>"
+      "<img src=\"images/words/se_gyung.jpg\" width=400>"
      ]
     },
     {
