Modify se-gyung picture extension

--- a/english/20141224_the_ideal_girlfriend.ipynb
+++ b/english/20141224_the_ideal_girlfriend.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:afc0a0ea771f5499241286c1e52ad34e6427821de4285c1613d3547c42009022"
+  "signature": "sha256:8f2a061efecb0a34613a5f0879839dcc82ed07577c66a33968a8df2a725ca5f8"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -14,7 +14,8 @@
      "source": [
       "# The ideal girlfriend\n",
       "\n",
-      "<img src=\"images/words/se_gyung.jpg\" width=400>"
+      "\n",
+      "<img src=\"http://upload.enews24.net/News/Contents/20130616/83075089.JPG\" width=400>"
      ]
     },
     {
