Add JOSEPHUS haje01 solved

--- a/books/Algorithmic_Problem_Solving_Strategies/problems/JOSEPHUS.ipynb
+++ b/books/Algorithmic_Problem_Solving_Strategies/problems/JOSEPHUS.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:4c6fadd477327eaddae9dca2452a506cbed42d050db6514780c85b6546dbf0be"
+  "signature": "sha256:4665315fa111c494c66320ced73c3feada06024f03419aacde10b785afe742b2"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -163,6 +163,26 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
+      "8 % 35"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "metadata": {},
+       "output_type": "pyout",
+       "prompt_number": 47,
+       "text": [
+        "8"
+       ]
+      }
+     ],
+     "prompt_number": 47
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
       "%run sources/TestJosephus.py"
      ],
      "language": "python",
@@ -222,7 +242,43 @@
       "for i in range(c):\n",
       "    print func(int(case[i].split(' ')[0]), int(case[i].split(' ')[1]))[0], func(int(case[i].split(' ')[0]), int(case[i].split(' ')[1]))[1]\n",
       "```\n",
-      "\n"
+      "\n",
+      "- \uae40\uc815\uc8fc\ub2d8\n",
+      "\n",
+      "```python\n",
+      "def do_case(n, ok):\n",
+      "    a = range(2, n+1)\n",
+      "    la = len(a)\n",
+      "    k = 0\n",
+      "    while la > 2:\n",
+      "        k = (k + ok - 1) % la\n",
+      "        a.pop(k)\n",
+      "        la -= 1\n",
+      "    return a\n",
+      "\n",
+      "\n",
+      "if __name__ == \"__main__\":\n",
+      "    c = int(raw_input())\n",
+      "    for i in range(c):\n",
+      "        n, k = [int(v) for v in raw_input().split()]\n",
+      "        f, s = do_case(n, k)\n",
+      "        print f, s\n",
+      "```\n",
+      "\n",
+      "- index 0\uc744 kill \ud558\uc9c0 \uc54a\uae30 \uc704\ud574\uc11c \ucc98\uc74c\ubd80\ud130 \uc2dc\uc791\uc744 2\ubd80\ud130 \ud55c\ub2e4. \ub09c \ucc98\uc74c\uc5d0 \uc65c 2\ubd80\ud130 \uc2dc\uc791\ud558\uc9c0? \ub77c\ub294 \uc758\ubb38\uc744 \uac16\uace0 \uc788\uc5c8\ub294\ub370 2\ubd80\ud130 \uc2dc\uc791\ud558\uba74 1\uc740 \ub9e4\ubc88 \uc8fd\uc73c\ub2c8\uae4c \uc5f0\uc0b0\ud560 \uc774\uc720\uac00 \uc5c6\ub2e4.\n",
+      "- k = (k + ok -1) % la \uc744 \ubcf4\uace0 \ubc18\ud588\ub2e4. \n",
+      "- 8 % 35 = 8\uc774\ub2c8\uae4c.\n",
+      "- \uad1c\ud788 while\ubb38\uc73c\ub85c i\uac00 max\\_\ubcf4\ub2e4 \ud070\uc9c0 \uc5f0\uc0b0\ud558\uc9c0 \uc54a\uc544\ub3c4 \ub41c\ub2e4. while\ubb38 \ud55c \ubc88 \uc4f0\uae30 \uc704\ud574\uc11c\ub294 opcode\uc758 \uc18c\ubaa8\uac00 \uaf64 \ub418\ub2c8\uae4c\n",
+      "  - [bbolmin :: C\ucf54\ub4dc->\uc5b4\uc148\ucf54\ub4dc \ubd84\uc11d \\[if, for, while\\]](http://bbolmin.tistory.com/52)\n",
+      "    - while\uc758 \uc5b4\uc148\ube14\ub9ac \ud45c\ud604\n",
+      "    - cmp: 4\ubc14\uc774\ud2b8\n",
+      "    - JE: 2\ubc14\uc774\ud2b8\n",
+      "    - SUB: 3\ubc14\uc774\ud2b8\n",
+      "\n",
+      "### \ucd5c\uc801\ud654\uc2dc \uc8fc\uc758\uc0ac\ud56d\n",
+      "\n",
+      "- loop\ubb38 \ucd5c\uc801\ud654\ub97c \uac00\uc7a5 \ub9ce\uc774 \uc2e0\uacbd\uc4f0\uc790\n",
+      "- loop\ubb38 \uc544\ub2cc \uacf3\uc740 \ucd5c\uc801\ud654\ub97c \ud574\ub3c4 \uc88b\uae30\ub294 \ud558\ub098 \ucd5c\uc801\ud654\ub97c \ud55c \uac83\uc5d0 \ube44\ud574 \ud6a8\uacfc\ub294 \uadf8\ub9ac \ud06c\uc9c0 \uc54a\ub2e4."
      ]
     }
    ],
