Modify How to use rkernel in IPython Notebook

--- a/reference/rkernel/rkernel_demo.ipynb
+++ b/reference/rkernel/rkernel_demo.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:55441cf88cfdb81eb205e809bee870f4596cf515521ee48446173e7aaee97cb5"
+  "signature": "sha256:62a216dda1015ee4032c572e66fb6b90be2307de385dc5336f20e4100e373a3d"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -25,20 +25,25 @@
      "source": [
       "## Logic\n",
       "\n",
+      "0. Install rpy2\n",
       "1. Create Profile\n",
       "2. Write rkernel.py\n",
-      "3. run rkernel"
+      "3. Run rkernel"
      ]
     },
     {
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "### 1. Create Profile\n",
+      "### 1. Install rpy2\n",
+      "\n",
+      ">$ pip install rpy2\n",
+      "\n",
+      "### 2. Create Profile\n",
       "\n",
       "<img src=\"files/images/01_create_profile.png\" />\n",
       "\n",
-      "### 2. Write rkernel.py\n",
+      "### 3. Write rkernel.py\n",
       "\n",
       "#### \ud604\uc7ac \ub514\ub809\ud1a0\ub9ac \ud655\uc778, rkernel.py \uc791\uc131, ipython notebook --profile=rkernel\n",
       "\n",
@@ -48,7 +53,7 @@
       "\n",
       "<img src=\"files/images/03_write_rkernel2.png\" />\n",
       "\n",
-      "### 3. run rkernel\n",
+      "### 4. run rkernel\n",
       "\n",
       "- http://localhost:8889/\n",
       "<img src=\"files/images/04_run_rkernel.png\" />"
