--- a/books/Building_Machine_Learning_Systems_with_Python/ch01.ipynb
+++ b/books/Building_Machine_Learning_Systems_with_Python/ch01.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:79aeb61b32dd2bc09848043f91a21a03d8f1bea45127e7294a890f919c5c02a0"
+  "signature": "sha256:3882d89eac604b889365f88b128bdbe0bd2900e48071214a8538f6802858ae35"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -4042,7 +4042,8 @@
       "- [2\ucc28 \ubc29\uc815\uc2dd\uc758 \ud574\uc640 \uadfc\uc758 \uacf5\uc2dd](http://www.mathteacher.pe.kr/algebra_dic/quad_equa_sol.htm)\n",
       "- [2\ucc28\ubc29\uc815\uc2dd\uc758 \uadfc\uc758 \uacf5\uc2dd](http://proi.edupia.com/contents/proicontents/proi/proi/middle/SchoolBook/seb/jd_seb1_content.asp?nTerm=1&nYear=9&nConID=1860&nCatID=728&nDaeNumber=6)\n",
       "- [\ubc29\uc815\uc2dd - \uc5d4\ud558\uc704\ud0a4 \ubbf8\ub7ec](https://mirror.enha.kr/wiki/%EB%B0%A9%EC%A0%95%EC%8B%9D)\n",
-      "- [\uc774\ucc28 \ubc29\uc815\uc2dd - \uc704\ud0a4\ubc31\uacfc, \uc6b0\ub9ac \ubaa8\ub450\uc758 \ubc31\uacfc\uc0ac\uc804](http://ko.wikipedia.org/wiki/%EC%9D%B4%EC%B0%A8_%EB%B0%A9%EC%A0%95%EC%8B%9D)"
+      "- [\uc774\ucc28 \ubc29\uc815\uc2dd - \uc704\ud0a4\ubc31\uacfc, \uc6b0\ub9ac \ubaa8\ub450\uc758 \ubc31\uacfc\uc0ac\uc804](http://ko.wikipedia.org/wiki/%EC%9D%B4%EC%B0%A8_%EB%B0%A9%EC%A0%95%EC%8B%9D)\n",
+      "- [Programming Example 1: Quadratic Equation Solver](http://www.cs.mtu.edu/~shene/COURSES/cs201/NOTES/chap03/quad-2.html): code \uc608\uc81c"
      ]
     },
     {
@@ -4059,6 +4060,7 @@
       "from math import sqrt\n",
       "def quadratic_equation(a, b, c):\n",
       "    d = b**2 - 4.0*a*c\n",
+      "    d = sqrt(d)\n",
       "    if d >= 0.0:\n",
       "        root1 = (-b + d) / (2.0 * a)\n",
       "        root2 = (-b - d) / (2.0 * a)\n",
@@ -4072,13 +4074,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 331,
+       "prompt_number": 335,
        "text": [
-        "(1166.5222841917118, -197067.2636700649)"
+        "(521.1661033601258, -1612.6860292174013)"
        ]
       }
      ],
-     "prompt_number": 331
+     "prompt_number": 335
     },
     {
      "cell_type": "markdown",
@@ -4100,13 +4102,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 334,
+       "prompt_number": 336,
        "text": [
         "6.513908628752688"
        ]
       }
      ],
-     "prompt_number": 334
+     "prompt_number": 336
     },
     {
      "cell_type": "code",
@@ -4134,7 +4136,7 @@
        ]
       }
      ],
-     "prompt_number": 330
+     "prompt_number": 337
     },
     {
      "cell_type": "markdown",
