--- a/books/Building_Machine_Learning_Systems_with_Python/ch05_01.ipynb
+++ b/books/Building_Machine_Learning_Systems_with_Python/ch05_01.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:422b5ee181b1b430fce59ec3e14f92b3f958358971eee04bfef5ce6c952351a8"
+  "signature": "sha256:5447ff13b6bacd662d933a7eecae782065460bd6d103896058330150775ee5d7"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -151,6 +151,19 @@
       "- Title\uc740 \uc9c8\ubb38\uc5d0 \ub300\ud55c \uc57d\uac04\uc758 \uc815\ubcf4\uac00 \uc788\uc9c0\ub9cc \ubb34\uc2dc\ud568\n",
       "- CommentCount\ub294 \ubb34\uc2dc\ud568. ViewCount\uc640 \uc720\uc0ac\ud558\uace0, \uc774\uc804\uc5d0 \uc62c\ub9b0 \uac8c\uc2dc\ubb3c\ub85c \ubd84\ub958\uae30\uc5d0 \ub3c4\uc6c0\uc774 \ub418\uaca0\uc9c0\ub9cc \ub2f5\ubcc0\uc744 \uc62c\ub9ac\ub294 \uc2dc\uc810\uc5d0\ub294 \ubcc4 \ub3c4\uc6c0\uc774 \ub418\uc9c0 \uc54a\uc74c\n",
       "- AcceptedAnswerId \uc18d\uc131\uc740 Score \uc18d\uc131\uacfc \uc720\uc0ac\ud568. \ub2f5\ubcc0\uc758 \uc9c8\uc744 \ub098\ud0c0\ub0b8\ub2e4. \uac01 \uc9c8\ubb38\uc744 \uc774\ub85c\uc368 \uc811\uadfc\ud560 \uc218 \uc788\uae30 \ub54c\ubb38\uc5d0 \uc774 \uc18d\uc131\uc744 \uc720\uc9c0\ud558\uae30\ubcf4\ub2e4\ub294 IsAccepted\ub77c\ub294 \uc0c8\ub85c\uc6b4 \uc18d\uc131\uc744 \ub9cc\ub4ec. 0\uacfc 1\ub85c \ub2f5\ubcc0\uc744 \ub098\ud0c0\ub0b4\uba70 \uc9c8\ubb38\uc740 \ubb34\uc2dc(ParentId=1)"
+     ]
+    },
+    {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "### Stackoverflow \uc9c8\ubb38 \ud14c\uc2a4\ud2b8\n",
+      "\n",
+      "<img src=\"files/images/stackoverflow_joke_response.png\" />\n",
+      "\n",
+      "- \uc774\ub7f0 \uc9c8\ubb38\ud558\uc9c0 \ub9d9\uc2dc\ub2e4.\n",
+      "- \uae00 \uc62c\ub9b0\uc9c0 20\ubd84 \ubc16\uc5d0 \uc548\ub410\ub294\ub370 \ub313\uae00\uc774 4\uac1c\ub098 \ub2ec\ub9ac\uace0 -9\uc810 \uba39\uc74c\n",
+      "- "
      ]
     },
     {
