Modify Image Position

--- a/hardware/hardware_hacking/eplilogue.ipynb
+++ b/hardware/hardware_hacking/eplilogue.ipynb
@@ -80,7 +80,35 @@
     "- ISP와 UART 장비를 계속 바꿔가면서(동일 장비로 연결하면 안됨) 삽질을 했는데 JMOD-128을 알려주시면서 이건 스위치 하나로 바꾸면 된다라고 하신다....!! **로우 단을 한 번쯤은 해봐야 한다**를 피부로 와닿게 해주는 사건... 나의 심정 변화: 아 귀찮아 -> 오..!! -> 헐! -> 아!\n",
     "- 인터럽트. DOS에서 배웠고 더는 쓸 일이 없을줄 알았는데 여기는 쓰더라.\n",
     "- 그리고 CPU clock도 다 맞춰줘야 한다. 자동으로 맞춰주는건 없음. 기대하지 마시라. 내 손가락을 중노동 시켜야 함. \n",
-    "- 발광부 실습하는데 저항 연결하지 않아서 태워 먹음..."
+    "- 발광부 실습하는데 저항 연결하지 않아서 태워 먹음...\n",
+    "\n",
+    "#### LED 불 켜기\n",
+    "\n",
+    "<img src=\"files/images/IMG_0988.JPG\" width=600px />\n",
+    "\n",
+    "#### UART로 A 찍어보기\n",
+    "\n",
+    "<img src=\"files/images/IMG_0990.JPG\" width=600px />\n",
+    "\n",
+    "#### 온도 센서 사용해서 온도 읽어오기1\n",
+    "\n",
+    "<img src=\"files/images/IMG_0992.JPG\" width=600px />\n",
+    "\n",
+    "#### 온도 센서 사용해서 온도 읽어오기2\n",
+    "\n",
+    "<img src=\"files/images/IMG_0994.JPG\" width=600px />\n",
+    "\n",
+    "#### 스위치 설명\n",
+    "\n",
+    "<img src=\"files/images/IMG_0995.JPG\" width=600px />\n",
+    "\n",
+    "#### 스위치 설명2\n",
+    "\n",
+    "<img src=\"files/images/IMG_0989.JPG\" width=600px />\n",
+    "\n",
+    "#### LED 켜기?\n",
+    "\n",
+    "<img src=\"files/images/IMG_0993.JPG\" width=600px />"
    ]
   },
   {
@@ -134,7 +162,13 @@
     "- 제조사에서 받는게 가장 빠르고 쉽다.\n",
     "- Binwalk, Firmware Mod Kit 등을 사용하면 쉽게 파일 시스템 뜰 수 있음\n",
     "- 그리고 취약한 펌웨어에서 공격 벡터 찾기. 뻥뻥뻥\n",
-    "- 임베디드 장비 취약점 분석 절차에 대한건 grayhash 홈페이지에 자료가 있던걸로 기억하는데 지금 찾아보니 없음. 내가 못 찾는건지.."
+    "- 임베디드 장비 취약점 분석 절차에 대한건 grayhash 홈페이지에 자료가 있던걸로 기억하는데 지금 찾아보니 없음. 내가 못 찾는건지..\n",
+    "\n",
+    "#### 공유기 UART 연결 후 부팅 장면\n",
+    "\n",
+    "- 바로 쉘 따임\n",
+    "\n",
+    "<img src=\"files/images/IMG_0996.JPG\" width=600px />"
    ]
   },
   {
@@ -176,7 +210,37 @@
     "- **각 핀들의 역할은 Datasheet를 찾고 거기에 맞는 신호를 프로그래밍해서 보내준다.** 이게 핵심\n",
     "- 핀 연결하고 데이터 통신을 어떻게 하는지? DDRA, PORTA 등이 무엇인지? 핀이 항상 로우인지 하이인지? 데이터 수신하려면 어떤 핀에 신호를 줘야 하는지?\n",
     "- ID 코드를 읽어서 UART로 출력하기\n",
-    "- 읽는데도 커맨드 타이밍이 있음"
+    "- 읽는데도 커맨드 타이밍이 있음\n",
+    "\n",
+    "\n",
+    "#### 훅 케이블로 전선 연결\n",
+    "\n",
+    "- 엄청 편하다!!\n",
+    "- 납땜 안해도 돼!!\n",
+    "\n",
+    "<img src=\"files/images/IMG_1695.JPG\" width=600px />\n",
+    "\n",
+    "#### 공유기 납땜하다 실패\n",
+    "\n",
+    "- 인두기의 높은 온도로 플래쉬 메모리 핀이 빠져 버렸다.\n",
+    "- 납땜하기 정말 어렵다.\n",
+    "\n",
+    "<img src=\"files/images/IMG_1698.JPG\" width=600px />\n",
+    "\n",
+    "#### 공유기 플래쉬 메모리 덤프\n",
+    "\n",
+    "- JMOD 전원은 또 다른 보드로\n",
+    "\n",
+    "<img src=\"files/images/IMG_1699.JPG\" width=600px />\n",
+    "\n",
+    "\n",
+    "#### PS/2 키보드 선 색깔의 역할\n",
+    "\n",
+    "<img src=\"files/images/IMG_1694.JPG\" width=600px />\n",
+    "\n",
+    "#### 훅 케이블\n",
+    "\n",
+    "<img src=\"files/images/IMG_1696.JPG\" width=600px />"
    ]
   },
   {
@@ -194,7 +258,15 @@
     "- 여기에서 Rising edge와 Falling edge 부분 나옴. 클럭과의 상관관계도 잘 이해해야 됨\n",
     "- 초기화, DR영역, IR영역을 모두 함수로 짜신 옆에 분이 있었는데 잘 짜시더라;; 한 눈에 쏘옥 알아보기 쉽게.\n",
     "- 역시 하드웨어라 비트단위 연산을 많이 해야 함\n",
-    "- 여기서 또 ID 레지스터를 읽는데 데이터시트를 보고 찾아야 한다. 그만큼 데이터시트를 보는 방법도 중요함"
+    "- 여기서 또 ID 레지스터를 읽는데 데이터시트를 보고 찾아야 한다. 그만큼 데이터시트를 보는 방법도 중요함\n",
+    "\n",
+    "#### 스마트폰 해킹 - ID값 읽기\n",
+    "\n",
+    "<img src=\"files/images/IMG_1700.JPG\" width=600px />\n",
+    "\n",
+    "#### 또 다른 보드로 연결 전?\n",
+    "\n",
+    "<img src=\"files/images/IMG_0991.JPG\" width=600px />"
    ]
   },
   {
@@ -230,111 +302,6 @@
     "- 이걸 들을 수 있으려면 기본적인 IT 소양은 있어야 한다. 그게 아니라면 시간 낭비, 돈 낭비. 뭐 물론 아무나 신청하지 않겠지만. 가격으로 필터링 됨\n",
     "- 어디에서나 초보일 때는 남들이 하는걸 보고 옆에서 도와줄 수 있는 사람이 있는게 좋은것 같다. 하드웨어 해킹?? 뭔가 나랑은 안 어울릴것 같은데 의외로 쉽다. 이쪽이 무주공산이라 그냥 와서 깃발 꼽으면 내 땅이 된다. 물론 몇 년 후에는 바뀌겠지만."
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 이미지들\n",
-    "\n",
-    "#### LED 불 켜기\n",
-    "\n",
-    "<img src=\"files/images/IMG_0988.JPG\" width=600px />\n",
-    "\n",
-    "#### UART로 A 찍어보기\n",
-    "\n",
-    "<img src=\"files/images/IMG_0990.JPG\" width=600px />\n",
-    "\n",
-    "#### 온도 센서 사용해서 온도 읽어오기1\n",
-    "\n",
-    "<img src=\"files/images/IMG_0992.JPG\" width=600px />\n",
-    "\n",
-    "#### 온도 센서 사용해서 온도 읽어오기2\n",
-    "\n",
-    "<img src=\"files/images/IMG_0994.JPG\" width=600px />\n",
-    "\n",
-    "#### 스위치 설명\n",
-    "\n",
-    "<img src=\"files/images/IMG_0995.JPG\" width=600px />\n",
-    "\n",
-    "#### 스위치 설명2\n",
-    "\n",
-    "<img src=\"files/images/IMG_0989.JPG\" width=600px />\n",
-    "\n",
-    "#### LED 켜기?\n",
-    "\n",
-    "<img src=\"files/images/IMG_0993.JPG\" width=600px />"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 공유기 UART 연결 후 부팅 장면\n",
-    "\n",
-    "- 바로 쉘 따임\n",
-    "\n",
-    "<img src=\"files/images/IMG_0996.JPG\" width=600px />"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 훅 케이블로 전선 연결\n",
-    "\n",
-    "- 엄청 편하다!!\n",
-    "- 납땜 안해도 돼!!\n",
-    "\n",
-    "<img src=\"files/images/IMG_1695.JPG\" width=600px />\n",
-    "\n",
-    "#### 공유기 납땜하다 실패\n",
-    "\n",
-    "- 인두기의 높은 온도로 플래쉬 메모리 핀이 빠져 버렸다.\n",
-    "- 납땜하기 정말 어렵다.\n",
-    "\n",
-    "#### 공유기 플래쉬 메모리 망가짐\n",
-    "\n",
-    "<img src=\"files/images/IMG_1698.JPG\" width=600px />\n",
-    "\n",
-    "#### 스마트폰 해킹 - ID값 읽기\n",
-    "\n",
-    "<img src=\"files/images/IMG_1700.JPG\" width=600px />\n",
-    "\n",
-    "#### 또 다른 보드로 연결 전?\n",
-    "\n",
-    "<img src=\"files/images/IMG_0991.JPG\" width=600px />"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "\n",
-    "#### PS/2 키보드 선 색깔의 역할\n",
-    "\n",
-    "<img src=\"files/images/IMG_1694.JPG\" width=600px />\n",
-    "\n",
-    "#### 훅 케이블\n",
-    "\n",
-    "<img src=\"files/images/IMG_1696.JPG\" width=600px />\n",
-    "\n",
-    "#### 공유기 플래쉬 메모리 덤프\n",
-    "\n",
-    "- JMOD 전원은 또 다른 보드로\n",
-    "\n",
-    "<img src=\"files/images/IMG_1699.JPG\" width=600px />"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
